@startuml
title Class Diagram for FindItemByCategoryCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class FindItemParser {
  + parse(input: String)
}

class FindItemByCategoryCommand {
  - categoryInput: String
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
}

class Item {
  - name: String
  - quantity: int
}

class UI {
  + showCategoryNotFound(...)
  + formatNoItemsFoundMessage(...)
  + formatFoundItemsMessage(...)
  + formatFindResultsHeader(...)
  + showMessage(...)
  + showNumberedList(...)
  + showDivider()
}

Command <|-- FindItemByCategoryCommand
FindItemParser ..> FindItemByCategoryCommand : creates
FindItemByCategoryCommand --> Inventory : queries
FindItemByCategoryCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml

